--- a/.github/workflows/azure-terraform-deploy.yaml
+++ b/.github/workflows/azure-terraform-deploy.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           tf_actions_version: 0.12.24
           tf_actions_subcommand: 'init'
-          tf_actions_working_dir: 'terraform'
+          tf_actions_working_dir: './terraform'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -30,5 +30,7 @@ jobs:
         with:
           tf_actions_version: 0.12.24
           tf_actions_subcommand: 'apply'
+          tf_actions_working_dir: './terraform'
+          args: '-var="client_secret=${{ secrets.AZURE_CLIENT_SECRET }}"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
