--- a/.github/workflows/azure-terraform-plan.yml
+++ b/.github/workflows/azure-terraform-plan.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           tf_actions_version: 0.12.24
           tf_actions_subcommand: 'init'
-          tf_actions_working_dir: 'terraform'
+          tf_actions_working_dir: './terraform'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -35,7 +35,7 @@ jobs:
         with:
           tf_actions_version: 0.12.24
           tf_actions_subcommand: 'validate'
-          tf_actions_working_dir: 'terraform'
+          tf_actions_working_dir: './terraform'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -45,7 +45,7 @@ jobs:
         with:
           tf_actions_version: 0.12.24
           tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: 'terraform'
+          tf_actions_working_dir: './terraform'
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
