--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -13,10 +13,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Message to comment on stale issues. If none provided, will not mark issues stale'
-        stale-pr-message: 'Message to comment on stale PRs. If none provided, will not mark PRs stale'
     - name: Run one liner 
-      run: echo Damnit
+      run: echo ${{ secrets.GITHUB_TOKEN }}
