--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -14,4 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run one liner 
-      run: echo ${{ secrets.GITHUB_TOKEN }}
+      run: echo $secret
+      env:
+        secret: ${{ secrets.GITHUB_TOKEN }}
