--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run one liner 
-      run: echo $secret
+      run: printf $secret
       env:
         secret: ${{ secrets.GITHUB_TOKEN }}
