--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run one liner 
-      run: printf $secret
+      run: printf $client_id $client_secret
       env:
-        secret: ${{ secrets.GITHUB_TOKEN }}
+        client_id: ${{ secrets.AZURE_CLIENT_ID }}
+        client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
