--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run one liner 
-      run: printf $client_id $client_secret
+      run: printf "$env:client_id"
       env:
         client_id: ${{ secrets.AZURE_CLIENT_ID }}
         client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
