--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -17,4 +17,5 @@ jobs:
       env:
         client_id: ${{ secrets.AZURE_CLIENT_ID }}
         client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
-      run: printf "$env:client_id" "%client_secret%"
+      run: |
+            echo "$env:client_id" "%client_secret%"
