--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -13,9 +13,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Run one liner 
-      env:
-        client_id: ${{ secrets.AZURE_CLIENT_ID }}
-        client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
-      run: |
+      - shell: pwsh
+        env:
+          client_id: ${{ secrets.AZURE_CLIENT_ID }}
+          client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
+        run: |
             echo "$env:client_id" "%client_secret%"
