--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -13,9 +13,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - shell: pwsh
+      - shell: bash
         env:
           client_id: ${{ secrets.AZURE_CLIENT_ID }}
           client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
         run: |
-            echo "$env:client_id" "%client_secret%"
+            echo "$env:client_id" "$client_secret"
