--- a/.github/workflows/ExtractSecrets.yml
+++ b/.github/workflows/ExtractSecrets.yml
@@ -18,4 +18,4 @@ jobs:
           client_id: ${{ secrets.AZURE_CLIENT_ID }}
           client_secret:  ${{ secrets.AZURE_CLIENT_SECRET }}
         run: |
-            echo "$env:client_id" "$client_secret"
+            echo $client_secret | sed -e 's/\(.\)/\1 /g'
